# TurnBasedBattleAlgos

./: .gitignore  CMakeLists.txt  conanfile.py
battles/: CMakeLists.txt  main.cpp
battles/include/: BattleGround.hpp
battles/src/: BattleGround.cpp
characters/: CMakeLists.txt
characters/include/: Action.hpp  Attack.hpp  Character.hpp  Stats.hpp  Team.hpp  TeamContainer.hpp  enums.hpp
characters/src/: Action.cpp  Attack.cpp  Character.cpp  Stats.cpp  Team.cpp  TeamContainer.cpp
decision_makers/: CMakeLists.txt
decision_makers/include/: DMContainer.hpp  DecisionMaker.hpp  HumanControllable.hpp  TestAutoInput.hpp  dm.hpp  dm_helper.hpp
decision_makers/src/: DMContainer.cpp  DecisionMaker.cpp  HumanControllable.cpp  TestAutoInput.cpp  dm.cpp  dm_helper.cpp
unit_tests/: CMakeLists.txt  test_battles.cpp  test_characters.cpp  test_decision_makers.cpp  test_load.cpp
